fix(origins): align cart item on mobile

--- a/themes/origins/styles/cart.scss
+++ b/themes/origins/styles/cart.scss
@@ -219,6 +219,7 @@ yc-section {
       .list {
         .item {
           flex-direction: column;
+          align-items: flex-start !important;
 
           .controls {
             width: 100%;
